added notice to template

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -15,6 +15,7 @@
       <a href="/">Voting</a> -
       <a href="/leaderboard">Leaderboard</a>
     </p>
+    <p>(You can vote as many times as you like, for as many talks as you like -- if you're <em>really</em> keen on something, I figure we should take that into account :-))</p>
     <ul id="videos">
       <li class="video">
         <div class="vid-entry">
