elaborated notice, removed from leaderboard

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -11,11 +11,11 @@
   </head>
   <body>
     <h2>PyCon Videos</h2>
+    <p id="notice">The interface is pretty spare, I'm afraid, but should be pretty easy to navigate -- it's in alphabetical order. Just find a talk you like the sound of and vote for it! You can vote as many times as you like, for as many talks as you like -- if you're <em>really</em> keen on something, I figure we should take that into account :-)</p>
     <p id="links">
       <a href="/">Voting</a> -
       <a href="/leaderboard">Leaderboard</a>
     </p>
-    <p>(You can vote as many times as you like, for as many talks as you like -- if you're <em>really</em> keen on something, I figure we should take that into account :-))</p>
     <ul id="videos">
       <li class="video">
         <div class="vid-entry">
